VAL-111 Updatd documentation and did some Sonar code style fixes

--- a/pdf-validator-parent/pdf-validator-monitoring/src/main/resources/templates/request.xml
+++ b/pdf-validator-parent/pdf-validator-monitoring/src/main/resources/templates/request.xml
@@ -8,7 +8,7 @@
                 <name>/fixedpath/file.pdf</name>
                 <absolutePath>/fixedpath/file.pdf</absolutePath>
                 <mimeType>PDF</mimeType>
-                <nextDocument></nextDocument>
+                <nextDocument />
             </document>
             <diagnosticDataToBeReturned>true</diagnosticDataToBeReturned>
         </ns2:validateDocument>
