VAL-127 Updated pretty-print view

--- a/siva-parent/siva-sample-application/src/main/resources/templates/layout/main-layout.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/layout/main-layout.jade
@@ -2,6 +2,7 @@ html
     head
         title SiVa Demo application
         link(rel="stylesheet", href="/webjars/bootstrap/4.0.0-alpha.2/dist/css/bootstrap.css")
+        link(rel="stylesheet", href="/css/desert.css")
         link(rel="stylesheet", href="/css/custom.css")
         script(src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js")
     body
