--- a/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
@@ -5,8 +5,15 @@ block content
         .col-md-12
             h1 1. Upload a digitally signed file
             form(action="/upload", method="POST", enctype="multipart/form-data")
-                input(type="file", name="file")
-                button(type="submit").btn.btn-primary Upload file
+                .form-group
+                    label Report type
+                    select.form-control(name="reportType")
+                        for report in reportTypes
+                            option(value=report.name())= report.name()
+                .form-group
+                    input(type="file", name="file")
+                .form-group
+                    button(type="submit").btn.btn-primary Validate
     .row
         .col-md-12
             h1 2. View validation report
