--- a/siva-parent/siva-sample-application/src/main/resources/static/css/custom.css
+++ b/siva-parent/siva-sample-application/src/main/resources/static/css/custom.css
@@ -1,3 +1,15 @@
 body {
     padding-top: 5rem;
 }
+
+.validation-result {
+    font-size: 1.3em;
+}
+
+.validation-result.valid {
+    color: green;
+}
+
+.validation-result.invalid {
+    color: red;
+}
