MAINTENANCE: Added sample application integration tests

--- a/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
@@ -8,7 +8,7 @@ block content
                 .form-group
                     input(type="file", name="file")
                 .form-group
-                    button(type="submit").btn.btn-primary Validate
+                    button(type="submit")#validate-btn.btn.btn-primary Validate
     if overallValidationResult != null
         .row
             .col-md-12
