--- a/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
@@ -1,4 +1,5 @@
 extends layout/main-layout
+include mixins/footer-mixins
 
 block content
     .row
@@ -22,12 +23,5 @@ block content
             h1 Validation report
             if validationResult != null
                 pre.prettyprint= validationResult
-    if buildInfo.github != null
-        .row.footer
-            .col-md-12
-                hr
-                span Git commit:&nbsp;
-                    a(href=buildInfo.github.url, target="_blank")= buildInfo.github.shortHash
-                span &nbsp;TravisCI build number:&nbsp;
-                    a(href=buildInfo.travisCi.buildUrl, target="_blank")= buildInfo.travisCi.buildNumber
+    +footerBuildInfo
 
