--- a/siva-parent/siva-sample-application/src/main/resources/templates/layout/main-layout.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/layout/main-layout.jade
@@ -1,6 +1,8 @@
 html
     head
         title SiVa Demo application
+        meta(charset="utf-8")
+        meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
         link(rel="stylesheet", href="/webjars/bootstrap/4.0.0-alpha.2/dist/css/bootstrap.css")
         link(rel="stylesheet", href="/webjars/dropzone/4.2.0/dropzone.css")
         link(rel="stylesheet", href="/webjars/highlightjs/9.4.0/styles/dark.css")
