--- a/siva-parent/siva-sample-application/src/main/resources/templates/layout/main-layout.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/layout/main-layout.jade
@@ -19,3 +19,8 @@ html
         script(src="/webjars/dropzone/4.2.0/dropzone.js")
         script(src="/webjars/highlightjs/9.4.0/highlight.pack.js")
         script(src="/js/custom.js")
+        //script(src="/js/google-tracking-init.js")
+        //script.
+        //    var trackingId = '';
+        //    ga('create', trackingId, 'auto');
+        //    ga('send', 'pageview');
