--- a/siva-parent/siva-sample-application/src/main/resources/templates/layout/main-layout.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/layout/main-layout.jade
@@ -15,7 +15,9 @@ html
             .row
                 .col-md-12.col-lg-12
                     block content
-        script(src="/webjars/jquery/3.0.0/dist/jquery.js")
+        script(src="/webjars/jquery/2.2.4/dist/jquery.js")
+        script(src="/webjars/tether/1.3.2/dist/js/tether.js")
+        script(src="/webjars/bootstrap/4.0.0-alpha.2/dist/js/bootstrap.js")
         script(src="/webjars/dropzone/4.2.0/dropzone.js")
         script(src="/webjars/highlightjs/9.4.0/highlight.pack.js")
         script(src="/js/custom.js")
