VAL-284 Add warning message to sample application

--- a/siva-parent/siva-sample-application/src/main/resources/static/css/custom.css
+++ b/siva-parent/siva-sample-application/src/main/resources/static/css/custom.css
@@ -23,6 +23,11 @@ body {
     color: #999
 }
 
+.icon-alert {
+    width: 35px;
+    margin: 10px 15px 0 15px;
+}
+
 .dropzone .dz-message {
     margin: 1em 0;
     min-height: 10%;
