MAINTENANCE: Updated warning text

--- a/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
@@ -9,7 +9,7 @@ block content
                     img.icon-alert(src="img/icon-alert.svg")
                 .col-md-11
                     strong Warning!&nbsp;
-                    | Using SiVa demo validation service is not secure. The uploaded content may be views by third parties.
+                    | Content uploaded to SiVa demo validation service may be visible to third parties.
                     | Upload only content that does not contain confidential information.
                 .clearfix
         .col-md-12
