MAINTENANCE:  Fixed validation result caching issues and set max file upload limit to 1

--- a/siva-parent/siva-sample-application/src/main/resources/static/css/custom.css
+++ b/siva-parent/siva-sample-application/src/main/resources/static/css/custom.css
@@ -28,6 +28,10 @@ body {
     margin: 10px 15px 0 15px;
 }
 
+.dz-max-files-reached {
+    border-color: #f2dede;
+}
+
 .dropzone .dz-message {
     margin: 1em 0;
     min-height: 10%;
