--- a/siva-parent/siva-sample-application/src/main/resources/templates/layout/main-layout.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/layout/main-layout.jade
@@ -3,11 +3,7 @@ html
         title SiVa Demo application
         meta(charset="utf-8")
         meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
-        link(rel="stylesheet", href="/webjars/bootstrap/4.0.0-alpha.2/dist/css/bootstrap.css")
-        link(rel="stylesheet", href="/webjars/dropzone/4.2.0/dropzone.css")
-        link(rel="stylesheet", href="/webjars/highlightjs/9.4.0/styles/dark.css")
-        link(rel="stylesheet", href="/css/desert.css")
-        link(rel="stylesheet", href="/css/custom.css")
+        link(rel="stylesheet", href="/owr/site.css")
     body
         nav.navbar.navbar-fixed-top.navbar-dark.bg-inverse
             a.navbar-brand(href="/") SiVa Sample Application
@@ -15,12 +11,7 @@ html
             .row
                 .col-md-12.col-lg-12
                     block content
-        script(src="/webjars/jquery/2.2.4/dist/jquery.js")
-        script(src="/webjars/tether/1.3.2/dist/js/tether.js")
-        script(src="/webjars/bootstrap/4.0.0-alpha.2/dist/js/bootstrap.js")
-        script(src="/webjars/dropzone/4.2.0/dropzone.js")
-        script(src="/webjars/highlightjs/9.4.0/highlight.pack.js")
-        script(src="/js/custom.js")
+        script(src="/owr/site.js")
         if googleTrackingId != null
             script(src="/js/google-tracking-init.js")
             script.
