--- a/siva-parent/siva-sample-application/src/main/resources/templates/layout/main-layout.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/layout/main-layout.jade
@@ -9,7 +9,7 @@ html
         nav.navbar.navbar-fixed-top.navbar-dark.bg-inverse
             .navbar-header
                 .container
-                    a.navbar-brand.hidden-md-down(href="/")
+                    a.navbar-brand(href="/")
                         img(src="img/open-eid-logo.svg")
                     a.navbar-brand(href="/")
                         span SiVa Sample Application
