--- a/siva-parent/siva-sample-application/src/main/resources/static/css/custom.css
+++ b/siva-parent/siva-sample-application/src/main/resources/static/css/custom.css
@@ -1,7 +1,3 @@
-body {
-    padding-top: 5rem;
-}
-
 .hide {
     display: none;
 }
@@ -54,6 +50,20 @@ body {
     font-size: .9em;
 }
 
+#top-navbar {
+    margin: 0;
+}
+
+#top-navbar.affix {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+#notification {
+    margin-bottom: 0;
+}
+
 .dropzone .dz-message {
     margin: 1em 0;
     min-height: 10%;
@@ -62,11 +72,11 @@ body {
     background-size: 10%;
 }
 
-@media screen and (max-width: 768px) {
-    body {
-        padding-top: 4rem;
-    }
+#content {
+    margin-top: 1rem;
+}
 
+@media screen and (max-width: 768px) {
     .dropzone .dz-message {
         margin: 1em 0;
         min-height: 10%;
