[skipci] MAINTENANCE: Remember warning close preference in cookie

--- a/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
@@ -2,7 +2,7 @@ extends layout/main-layout
 include mixins/footer-mixins
 
 block notificationBlock
-    #notification.alert.alert-warning(role="alert")
+    #notification.alert.alert-warning.hide(role="alert")
         button.close(type="button", data-dismiss="alert") ×
         strong Warning!&nbsp;
         | Content uploaded to SiVa demo validation service may be visible to third parties.
