VAL-303 Added EU logo to sample application

--- a/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
@@ -13,7 +13,7 @@ block content
         .col-md-12
             h1.hidden-md-down Upload a digitally signed file
             h3.hidden-md-up Upload signed file
-            p.hidden-md-down Supported file types are: BDOC, DDOC and PDF
+            p.hidden-md-down Supported file types are: BDOC, DDOC, PDF and XRoad ASiCE
             form#siva-dropzone.dropzone(action="/upload", style="width: 100%", method="POST", enctype="multipart/form-data")
                 input.hide(type="file", name="file")
     .row.hide#validation-summery
