--- a/siva-parent/siva-sample-application/src/main/resources/templates/mixins/footer-mixins.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/mixins/footer-mixins.jade
@@ -16,4 +16,6 @@ mixin footerBuildInfo
                 img(src="img/social/Facebook.svg", alt="Facebook Riigi Infosüsteemide Amet")
             a.footer-social(href="https://github.com/open-eid/SiVa", target="_blank")
                 img(src="img/social/Github.svg", alt="Github SiVa project")
+            a.footer-social.hidden-md-up(href="/")
+                img(src="img/eu-logo.svg", alt="EU Supported project Logo")
 
