VAL-303 Changed EU logo location

--- a/siva-parent/siva-sample-application/src/main/resources/static/css/custom.css
+++ b/siva-parent/siva-sample-application/src/main/resources/static/css/custom.css
@@ -82,6 +82,11 @@
     margin-top: 1rem;
 }
 
+.eu-brand {
+    height: 7%;
+    width: auto;
+}
+
 @media screen and (max-width: 768px) {
     .dropzone .dz-message {
         margin: 1em 0;
