--- a/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
@@ -14,7 +14,7 @@ block content
             h1.hidden-md-down Upload a digitally signed file
             h3.hidden-md-up Upload signed file
             p.hidden-md-down Supported file types are: BDOC, DDOC, PDF and XRoad ASiCE
-        .col-lg-6.hidden-md-down
+        .col-lg-2.hidden-md-down.pull-lg-right
             img.pull-lg-right.eu-brand(src="img/eu-logo.svg")
     .row
         .col-md-12
