VAL-333 Make sample application work with relative paths

--- a/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
@@ -18,7 +18,7 @@ block content
             img.pull-lg-right.eu-brand(src="img/eu-logo.svg")
     .row
         .col-md-12
-            form#siva-dropzone.dropzone(action="/upload", style="width: 100%", method="POST", enctype="multipart/form-data")
+            form#siva-dropzone.dropzone(action="upload", style="width: 100%", method="POST", enctype="multipart/form-data")
                 input.hide(type="file", name="file")
     .row.hide#validation-summery
         .col-md-12
