--- a/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
@@ -17,6 +17,14 @@ block content
         .col-lg-2.hidden-md-down.pull-lg-right
             img.pull-lg-right.eu-brand(src="img/eu-logo.svg")
     .row
+        .col-md-4
+            .input-group
+                span.input-group-addon#policy-addon Policy:
+                select.form-control#policy-select(aria-describedby="policy-addon")
+                    option(value="") default
+                    option(value="POLv1") POLv1
+                    option(value="POLv2") POLv2
+    .row
         .col-md-12
             form#siva-dropzone.dropzone(action="upload", style="width: 100%", method="POST", enctype="multipart/form-data")
                 input.hide(type="file", name="file")
