--- a/siva-parent/siva-sample-application/src/main/resources/templates/layout/main-layout.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/layout/main-layout.jade
@@ -4,7 +4,7 @@ html
         meta(charset="utf-8")
         meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
         meta(name="viewport",content="width=device-width, initial-scale=1")
-        link(rel="stylesheet", href="/owr/site.css")
+        link(rel="stylesheet", href="owr/site.css")
     body
         block notificationBlock
         nav#top-navbar.navbar.navbar-dark.bg-inverse.navbar-sticky-top
