[SIVA-46] container validation warning [SIVA-42] unsigned files check and warning message

--- a/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
@@ -35,6 +35,12 @@ block content
                 strong#document-name
                 |&nbsp;is&nbsp;
                 strong#overall-validation-result.validation-result
+
+    .row.hide#validation-warnings
+            .col-md-12
+                h4 Validation warnings
+                ul.validation-warning#validation-warning-rows
+
     .row.hide#result-area
         .col-md-12
             h1 Validation report
