SIVARIA2-95 sample application url fix

--- a/siva-parent/siva-sample-application/src/main/resources/templates/layout/main-layout.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/layout/main-layout.jade
@@ -18,7 +18,7 @@ html
             .row
                 .col-md-12.col-lg-12
                     block content
-        script(src="/owr/site.js")
+        script(src="owr/site.js")
         if googleTrackingId != null
             script(src="js/google-tracking-init.js")
             script.
