SIVA-122 - Diagnostic report type support for sample application JSON validations

--- a/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
@@ -30,6 +30,7 @@ block content
                     option(value="") default
                     option(value="Simple") Simple
                     option(value="Detailed") Detailed
+                    option(value="Diagnostic") Diagnostic
 
         .col-md-3
             .input-group
