SIVA-232 add validation warning when 'test' profile active

--- a/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/index.jade
@@ -10,9 +10,10 @@ block notificationBlock
 
 block content
     .row
-        .col-lg-6
-            h1.hidden-md-down Upload a digitally signed file
-            h3.hidden-md-up Upload signed file
+        .col-lg-10
+            h5 This is a demo interface for testing RIA's digital signature validation service SiVa. The service validates digital signatures made with both test and live components.
+            h5 The service does not distinguish test signatures. RIA does not take responsibility for the availability of the interface nor the veracity of the validation result.
+            h5: a(href="https://www.ria.ee/en/state-information-system/eid/partners.html") Read more about validation service and digital signature gateway service
         .col-lg-2.hidden-md-down.pull-lg-right
             img.pull-lg-right.eu-brand(src="img/eu-logo.svg")
     .row
